--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*"
+        "yiisoft/yii2-swiftmailer": "*",
+        "yiisoft/yii2-jui": "2.0.4"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
@@ -29,6 +30,18 @@
         "process-timeout": 1800
     },
     "extra": {
+         "yii\\composer\\Installer::postCreateProject": {
+           "setPermission": [
+            {
+              "runtime": "0777",
+              "web/assets": "0777",
+              "yii": "0755"
+            }
+            ],
+        "generateCookieValidationKey": [
+          "config/web.php"
+        ]
+       },
         "asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
             "bower-asset-library": "vendor/bower"
